add meta description, remove max scale, add form labels

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
       rel="stylesheet"
     />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
+      name="description"
+      content="Stephen Cole Bowen's professional online portfolio."
     />
     <title>Stephen Cole Bowen || Web development</title>
   </head>
