update robots.txt file, update meta description

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Stephen Cole Bowen's professional online portfolio."
+      content="Stephen Cole Bowen's professional web development portfolio."
     />
     <title>Stephen Cole Bowen || Web development</title>
   </head>
